tests/snapshots/snapshots__budget_sonner_level4.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1900 → level 5 (971 words)

assets.tsx
     5→export const getAsset = (type: ToastTypes): JSX.Element | null => {
    24→const bars = Array(12).fill(0);
    26→export const Loader = ({ visible, className }: { visible: boolean; className?: string }) => {
    38→const SuccessIcon = (
    48→const WarningIcon = (
    58→const InfoIcon = (
    68→const ErrorIcon = (
    78→export const CloseIcon = (
hooks.tsx
     3→export const useIsDocumentHidden = () => {
index.tsx
    22→const VISIBLE_TOASTS_AMOUNT = 3;
    25→const VIEWPORT_OFFSET = '24px';
    28→const MOBILE_VIEWPORT_OFFSET = '16px';
    31→const TOAST_LIFETIME = 4000;
    34→const TOAST_WIDTH = 356;
    37→const GAP = 14;
    40→const SWIPE_THRESHOLD = 45;
    43→const TIME_BEFORE_UNMOUNT = 200;
    45→function cn(...classes: (string | undefined)[]) {
    49→function getDefaultSwipeDirections(position: string): Array<SwipeDirection> {
    64→const Toast = (props: ToastProps) => {
   507→function getDocumentDirection(): ToasterProps['dir'] {
   520→function assignOffset(defaultOffset: ToasterProps['offset'], mobileOffset: ToasterProps['mobileOffset']) {
   552→function useSonner() {
   593→const Toaster = React.forwardRef<HTMLElement, ToasterProps>(function Toaster(props, ref) {
state.ts
    15→type titleT = (() => React.ReactNode) | React.ReactNode;
    17→class Observer {
    22→  constructor() {
    29→  subscribe = (subscriber: (toast: ToastT | ToastToDismiss) => void) => {
    38→  publish = (data: ToastT) => {
    42→  addToast = (data: ToastT) => {
    47→  create = (
    48→    data: ExternalToast & {
    88→  dismiss = (id?: number | string) => {
   101→  message = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   105→  error = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   109→  success = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   113→  info = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   117→  warning = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   121→  loading = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   125→  promise = <ToastData>(promise: PromiseT<ToastData>, data?: PromiseData<ToastData>) => {
   243→  custom = (jsx: (id: number | string) => React.ReactElement, data?: ExternalToast) => {
   249→  getActiveToasts = () => {
   254→export const ToastState = new Observer();
   257→const toastFunction = (message: titleT, data?: ExternalToast) => {
   268→const isHttpResponse = (data: any): data is Response => {
   279→const basicToast = toastFunction;
   281→const getHistory = () => ToastState.toasts;
   282→const getToasts = () => ToastState.getActiveToasts();
   285→export const toast = Object.assign(
types.ts
     3→export type ToastTypes = 'normal' | 'action' | 'success' | 'info' | 'warning' | 'error' | 'loading' | 'default';
     5→export type PromiseT<Data = any> = Promise<Data> | (() => Promise<Data>);
     7→export interface PromiseIExtendedResult extends ExternalToast {
     8→  message: React.ReactNode;
     9→}
    11→export type PromiseTExtendedResult<Data = any> =
    12→  | PromiseIExtendedResult
    13→  | ((data: Data) => PromiseIExtendedResult | Promise<PromiseIExtendedResult>);
    15→export type PromiseTResult<Data = any> =
    16→  | string
    17→  | React.ReactNode
    18→  | ((data: Data) => React.ReactNode | string | Promise<React.ReactNode | string>);
    20→export type PromiseExternalToast = Omit<ExternalToast, 'description'>;
    22→export type PromiseData<ToastData = any> = PromiseExternalToast & {
    23→  loading?: string | React.ReactNode;
    24→  success?: PromiseTResult<ToastData> | PromiseTExtendedResult<ToastData>;
    25→  error?: PromiseTResult | PromiseTExtendedResult;
    26→  description?: PromiseTResult;
    27→  finally?: () => void | Promise<void>;
    28→};
    30→export interface ToastClassnames {
    31→  toast?: string;
    32→  title?: string;
    33→  description?: string;
    34→  loader?: string;
    35→  closeButton?: string;
    36→  cancelButton?: string;
    37→  actionButton?: string;
    38→  success?: string;
    39→  error?: string;
    40→  info?: string;
    41→  warning?: string;
    42→  loading?: string;
    43→  default?: string;
    44→  content?: string;
    45→  icon?: string;
    46→}
    48→export interface ToastIcons {
    49→  success?: React.ReactNode;
    50→  info?: React.ReactNode;
    51→  warning?: React.ReactNode;
    52→  error?: React.ReactNode;
    53→  loading?: React.ReactNode;
    54→  close?: React.ReactNode;
    55→}
    57→export interface Action {
    58→  label: React.ReactNode;
    59→  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
    60→  actionButtonStyle?: React.CSSProperties;
    61→}
    63→export interface ToastT {
    64→  id: number | string;
    65→  toasterId?: string;
    66→  title?: (() => React.ReactNode) | React.ReactNode;
    67→  type?: ToastTypes;
    68→  icon?: React.ReactNode;
    69→  jsx?: React.ReactNode;
    70→  richColors?: boolean;
    71→  invert?: boolean;
    72→  closeButton?: boolean;
    73→  dismissible?: boolean;
    74→  description?: (() => React.ReactNode) | React.ReactNode;
    75→  duration?: number;
    76→  delete?: boolean;
    77→  action?: Action | React.ReactNode;
    78→  cancel?: Action | React.ReactNode;
    79→  onDismiss?: (toast: ToastT) => void;
    80→  onAutoClose?: (toast: ToastT) => void;
    81→  promise?: PromiseT;
    82→  cancelButtonStyle?: React.CSSProperties;
    83→  actionButtonStyle?: React.CSSProperties;
    84→  style?: React.CSSProperties;
    85→  unstyled?: boolean;
    86→  className?: string;
    87→  classNames?: ToastClassnames;
    88→  descriptionClassName?: string;
    89→  position?: Position;
    90→  testId?: string;
    91→}
    93→export function isAction(action: Action | React.ReactNode): action is Action {
    97→export type Position = 'top-left' | 'top-right' | 'bottom-left' | 'bottom-right' | 'top-center' | 'bottom-center';
    98→export interface HeightT {
    99→  height: number;
   100→  toastId: number | string;
   101→  position: Position;
   102→}
   104→interface ToastOptions {
   118→type Offset =
   119→  | {
   120→      top?: string | number;
   121→      right?: string | number;
   122→      bottom?: string | number;
   123→      left?: string | number;
   124→    }
   125→  | string
   126→  | number;
   128→export interface ToasterProps {
   129→  id?: string;
   130→  invert?: boolean;
   131→  theme?: 'light' | 'dark' | 'system';
   132→  position?: Position;
   133→  hotkey?: string[];
   134→  richColors?: boolean;
   135→  expand?: boolean;
   136→  duration?: number;
   137→  gap?: number;
   138→  visibleToasts?: number;
   139→  closeButton?: boolean;
   140→  toastOptions?: ToastOptions;
   141→  className?: string;
   142→  style?: React.CSSProperties;
   143→  offset?: Offset;
   144→  mobileOffset?: Offset;
   145→  dir?: 'rtl' | 'ltr' | 'auto';
   146→  swipeDirections?: SwipeDirection[];
   147→  icons?: ToastIcons;
   148→  customAriaLabel?: string;
   149→  containerAriaLabel?: string;
   150→}
   152→export type SwipeDirection = 'top' | 'right' | 'bottom' | 'left';
   154→export interface ToastProps {
   155→  toast: ToastT;
   156→  toasts: ToastT[];
   157→  index: number;
   158→  swipeDirections?: SwipeDirection[];
   159→  expanded: boolean;
   160→  invert: boolean;
   161→  heights: HeightT[];
   162→  setHeights: React.Dispatch<React.SetStateAction<HeightT[]>>;
   163→  removeToast: (toast: ToastT) => void;
   164→  gap?: number;
   165→  position: Position;
   166→  visibleToasts: number;
   167→  expandByDefault: boolean;
   168→  closeButton: boolean;
   169→  interacting: boolean;
   170→  style?: React.CSSProperties;
   171→  cancelButtonStyle?: React.CSSProperties;
   172→  actionButtonStyle?: React.CSSProperties;
   173→  duration?: number;
   174→  className?: string;
   175→  unstyled?: boolean;
   176→  descriptionClassName?: string;
   177→  loadingIcon?: React.ReactNode;
   178→  classNames?: ToastClassnames;
   179→  icons?: ToastIcons;
   180→  closeButtonAriaLabel?: string;
   181→  defaultRichColors?: boolean;
   182→}
   184→export enum SwipeStateTypes {
   185→  SwipedOut = 'SwipedOut',
   186→  SwipedBack = 'SwipedBack',
   187→  NotSwiped = 'NotSwiped',
   188→}
   190→export type Theme = 'light' | 'dark';
   192→export interface ToastToDismiss {
   193→  id: number | string;
   194→  dismiss: boolean;
   195→}
   197→export type ExternalToast = Omit<ToastT, 'id' | 'type' | 'title' | 'jsx' | 'delete' | 'promise'> & {
   198→  id?: number | string;
   199→  toasterId?: string;
   200→};
