tests/snapshots/snapshots__budget_sonner_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 30 → level 0 (26 words)

LICENSE.md
README.md
playwright.config.ts
src/assets.tsx
src/hooks.tsx
src/index.tsx
src/state.ts
src/types.ts
website/README.md
website/next.config.js
website/postcss.config.js
website/src/components/CodeBlock/index.tsx
website/src/components/ExpandModes/index.tsx
website/src/components/Footer/index.tsx
website/src/components/Head/index.tsx
website/src/components/Hero/index.tsx
website/src/components/How/How.tsx
website/src/components/Installation/index.tsx
website/src/components/Other/Other.tsx
website/src/components/Position/index.tsx
website/src/components/Types/Types.tsx
website/src/components/Usage/index.tsx
website/src/pages/_app.tsx
website/src/pages/index.tsx
website/tailwind.config.js
website/theme.config.jsx
